# MCP_Core

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  MAINTAINER.md  README.md  env_check.py  find_claude_config.py  pyproject.toml  requirements-semantic.txt  requirements.txt  requirements_dev.txt  run.bat  setup.bat  test_kicad_smoke.py
.claude/: settings.local.json
config/: doc_pins.py  doc_pins.toml  embedding_endpoints.py  embedding_endpoints.toml  settings.py
embedding_cache/Qwen--Qwen3-Embedding-0.6B_1024/: embeddings.npy  metadata.json
internal_docs/.claude/: CLIENT_SETUP.md  DESIGN_INFLUENCES.md  HANDOFF.md  KICAD_DOC_SOURCE.md  LICENSE_COMPLIANCE.md  MCP_PROTOCOL_NOTES.md  MULTI_SOURCE_FRAMEWORK.md  PLANNER_PROTOCOL.md  PROJECT_VISION.md  TOOL_ROADMAP.md  VERSION_STRATEGY.md  WORKER_PROTOCOL.md
scripts/: bench_boundary_strategies.py  bench_longest_chunk.py  bench_single.py  benchmark_d2_embedding.py  benchmark_embedding.py  corpus_chunk_stats.py  validate_embedder.py  validate_reranker.py
src/kicad_mcp/: __init__.py  server.py  (+4 more)
tests/: test_asciidoc_chunker.py  test_best_snippet.py  test_chunker.py  test_cli_filters.py  test_cli_parser.py  test_cross_refs.py  test_doc_index.py  test_doc_index_semantic.py  test_doc_loader.py  test_doc_pins.py  test_doc_source.py  test_docs_commands.py  test_docs_read_lines.py  test_docs_search_cli.py  test_embedding_cache.py  test_error_surfacing.py  test_http_embedder.py  test_paragraph_chunker.py  test_reranker.py  test_server_startup.py  test_tiered_search.py  test_url_builder.py  test_vector_index.py
(+134 files in other folders)
