[project]
name = "kicad-mcp-server"
version = "0.1.0"
description = "MCP server for KiCad documentation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
